# dotfiles

./: .gitignore  .gitmodules  .markdownlint.jsonc  CLAUDE.md  _fns.zsh  _load.zsh  aliases.zsh  approve_pr.py  browser.zsh  dot.zsh  dotfiles-pack.zsh  dotfiles-unpack.zsh  dotnet.zsh  editor.zsh  functions.sh  fzf.zsh  gh.zsh  git.zsh  init.zsh  load.sh  mysql_show_tables.sh  navi.zsh  node.zsh  nvm.zsh  oh-my-zsh-plugins-aliases.zsh  pack.zsh  programs.sh  proxy.sh  pyproject.toml  python.zsh  setup-claude.zsh  setup-tmux.zsh  shortcuts.sh  shorthands.zsh  test_audio.py  test_sql.sh
.claude/: generate_notification_voices.py  notification_config.json  settings.local.json
bin-public/: agents-to-claude  aws-profiles  cclick  cli-up  concat-mp4  env-init  env-puppet  env-shut  fix-podman-time  format-logs  format_logs_no_buf  git-author-reset  git-branches-check  git-branches-prune  git-branches-setup-tracking  git-file-history  git-hour-commit  git-stats  nb-to-md  pipenv-outdated  setup-chrome-profile  setup-vscode-settings  setup-workspaces  whisper
claude/: setup.zsh
cli/: README.md  pyproject.toml
cli/app/: cli.py  ignore_ssl.py  telemetry.py
cli/app/command/: check_auth.py  check_prs.py  git_recent.py  new_command.py  new_pr.py  work_stats.py  xls_files.py
cli/app/command/alfred/: __init__.py  alfred.cheat  create_prompts.py  delete_prompts.py  edit_prompts.py  execute_prompt.py  migrate_prompts.py  release.py  sync_local.py
cli/app/command/audio/: __init__.py  crawl.cheat  md_to_speech.py
cli/app/command/brew/: __init__.py
cli/app/command/claude/: README.md  __init__.py  llm_validator.py  permissions.py  permissions_apply.py  single.py  test_cases.py  test_permissions.py  test_runner.py  utils.py
cli/app/command/crawl/: __init__.py  crawl.cheat  page.py
cli/app/command/git/: __init__.py  analyze_prs.py  approve.py  auth_check.py  changes_check.py  commit.py  git.cheat  new_pr.py  project_stats.py  prs_check.py
cli/app/command/investment/: __init__.py  compare.py  generator.py  sample.csv  simulate.py
cli/app/command/kubectl/: README.md  __init__.py  pod_interact.py  watch_gugelmin.py
cli/app/command/llm/: __init__.py  code.py
cli/app/command/notes/: README.md  __init__.py  alias.zsh  args.json  complete.py  create.py  delete.py  edit.py  incomplete.py  list.py  notes.cheat  search.py  summary.py  update.py  utils.py
cli/app/command/tmux/: __init__.py  claude.py  models.py  state.py  utils.py
cli/app/command/video/: __init__.py  cache.py  chat.py
config/: ackrc  brew.yaml  keybindings.jsonc  settings.jsonc  tmux.conf  vscode-settings.jsonc
(+168 files in other folders)
