[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Arthur Moura Carvalho <armoucar@gmail.com>"]
readme = "cli/README.md"
packages = [{ include = "cli/app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
click = "^8.1.8"
openai = {version = "1.70.0", extras = ["voice_helpers"]}
pyaudio = "^0.2.14"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
tabulate = "^0.9.0"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-exporter-otlp = "^1.30.0"
openinference-instrumentation-openai = "^0.1.21"
firecrawl-py = "^1.15.0"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.3"

[tool.poetry.scripts]
dot = "cli.app.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
