[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.12"
description = "My dot files"
authors = [{ name = "Arthur Moura Carvalho", email = "armoucar@gmail.com" }]
dependencies = [
  "click<9.0.0,>=8.1.8",
  "openai[voice_helpers]<2.0.0,>=1.99.9",
  "pyaudio<1.0.0,>=0.2.14",
  "python-dotenv<2.0.0,>=1.1.1",
  "pyyaml<7.0.0,>=6.0.2",
  "tabulate<1.0.0,>=0.9.0",
  "opentelemetry-api<2.0.0,>=1.36.0",
  "opentelemetry-sdk<2.0.0,>=1.36.0",
  "opentelemetry-exporter-otlp<2.0.0,>=1.36.0",
  "openinference-instrumentation-openai<1.0.0,>=0.1.21",
  "firecrawl-py<3.0.0,>=2.16.5",
  "python-dateutil<3.0.0.0,>=2.9.0.post0",
  "pandas<3.0.0,>=2.3.1",
]
readme = "cli/README.md"


[project.scripts]
dot = "cli.app.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
