[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Arthur Moura Carvalho <armoucar@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
openai = "^1.58.1"

[tool.poetry.scripts]
dot = "app.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
